fix midgard
